# Deep-Research-Agent

./: README.md  chainlit_app.py  config.py  coordinator.py  pyproject.toml
.chainlit/: config.toml
research_agents/: query_agent.py  research_agent.py  search_agent.py  synthesis_agent.py
