[project]
name = "deep-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "ddgs>=9.5.4",
    "openai-agents>=0.2.8",
    "requests>=2.32.5",
    "python-dotenv>=1.1.1",
    "chainlit>=2.7.1.1"
]
